--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,12 +41,9 @@ nav ul li a {
   text-decoration: none;
   font-weight: bold;
   transition: 0.3s;
-}
-a{
-  
   font-size: 18px;
 }
-a:hover{ 
+nav ul li a:hover{ 
   background: #ff9381;
   border-radius: 10px;
   padding: 10px;
